--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,8 @@
-logs
-project/project
-project/target
-target
-lib_managed
-tmp
-.history
-dist
-/.idea
-/*.iml
-/*.ipr
-/out
-/.idea_modules
-/.classpath
-/.project
-/RUNNING_PID
-/.settings
+.idea/
+.vscode/
+*.iml
+*.ipr
 *.iws
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+*.pyc
+*.tgz
+.envrc
