BAU: remove safety
Co-authored-by: Tim Fothergill <67912934+TimothyFothergill@users.noreply.github.com>

--- a/{{cookiecutter.canary_repo_name_formatted}}/Makefile
+++ b/{{cookiecutter.canary_repo_name_formatted}}/Makefile
@@ -76,10 +76,6 @@ publish: ## Build and push canary zip to S3 (requires MDTP_ENVIRONMENT to be set
 	@./bin/canary-tools.sh publish
 .PHONY: publish
 
-safety: ## Run Safety
-	@poetry run safety check
-.PHONY: safety
-
 setup: check_poetry ## Setup virtualenv & dependencies using poetry and set-up the git hook scripts
 	@export POETRY_VIRTUALENVS_IN_PROJECT=$(POETRY_VIRTUALENVS_IN_PROJECT) && poetry run pip install --upgrade pip
 	@poetry config experimental.new-installer false
@@ -96,7 +92,7 @@ test: setup ## Run unit tests
 	@./bin/canary-tools.sh unittest
 .PHONY: test
 
-verify: test bandit black safety ## Run all the checks and tests
+verify: test bandit black ## Run all the checks and tests
 .PHONY: verify
 
 verify_publish_release: verify prepare_release publish cut_release ## Run all the checks and tests, package, publish and release the canary
